# athena-udf

./: Cargo.toml  README.md  justfile  release.toml
.github/workflows/: ci.yml  publish.yml
athena-udf/: Cargo.toml
athena-udf/src/: arrow_conversions.rs  lib.rs  process_macro.rs  register_macro.rs  serde_base64.rs  serialization.rs
examples/manual-udf/: Cargo.toml  README.md
examples/manual-udf/src/: main.rs
examples/simple-udf/: Cargo.toml  README.md
examples/simple-udf/src/: main.rs
src/: lib.rs  process_macro.rs  request.rs  response.rs  serde_base64.rs
