[workspace]
members = ["athena-udf", "examples/simple-udf", "examples/manual-udf"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Matthias Queitsch <matthias.queitsch@unite.eu>"]
license = "MIT"
rust-version = "1.85.1"
homepage = "https://github.com/matthias-Q/athena-udf"
repository = "https://github.com/matthias-Q/athena-udf"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
