[package]
name = "athena-udf"
version = "0.2.0"
edition = "2021"
authors = ["Matthias Queitsch <matthias.queitsch@unite.eu>"]
description = "A crate for building AWS Athena User Defined Functions in Rust"
license = "MIT"
keywords = ["athena", "aws", "udf", "lambda", "arrow"]
categories = ["database"]
rust-version = "1.85.1"
homepage = "https://github.com/matthias-Q/athena-udf"
repository = "https://github.com/matthias-Q/athena-udf"
readme = "../README.md"

[dependencies]
lambda_runtime = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0", features=["preserve_order"]}
arrow = { version = "57", features = ["ipc"] }
base64 = "0.22"
log = "0.4"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

